# virtual_manager

./: .gitignore  README.md  __init__.py  app.py  db.py  helpers.py  pyproject.toml  requirements.txt  schema.sql
orm/: fields.py  model.py
src/: __init__.py  db.py
src/auth/: __init__.py
src/auth/view/: auth.py
src/index/view/: index.py
src/items/: form.py  views.py
src/products/html/: product-detail.html  products.html
src/products/js/: product-detail.js
src/products/view/: products.py
src/recipes/css/: recipe-inline.css
src/recipes/html/partials/: recipe-loop-form.html
src/recipes/view/: recipes.py
src/recipes/view/tests/: form_handle_test.py
static/: layout.js  styles.css
templates/partials/forms/: measure-units.html
virtual_manager/: __init__.py  db.py  helpers.py  schema.sql
virtual_manager/src/: __init__.py
virtual_manager/src/auth/: views.py
virtual_manager/src/auth/js/: register.js
virtual_manager/src/auth/view/: auth.py
virtual_manager/src/index/html/: index_table.html
virtual_manager/src/index/view/: index.py
virtual_manager/src/inflow/: views.py
virtual_manager/src/inflow/css/: produce-product-detail.css
virtual_manager/src/inflow/html/: inflow.html  produce-product-detail.html  (+2 more)
virtual_manager/src/items/: form.py  views.py
virtual_manager/src/outflow/: views.py
virtual_manager/src/transactions/: views.py
virtual_manager/static/: layout.js  styles.css
virtual_manager/static/components/: toast.js
virtual_manager/templates/: layout.html
virtual_manager/templates/partials/: macros.html
(+34 files in other folders)
