[project]
name = "virtual_manager"
version = "1.0.0"
description = "A basic inventory and finances app manager."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["virtual_manager"]

[tool.coverage.run]
branch = true
source = ["virtual_manager"]