[project]
name = "project"
version = "1.0.0"
description = "A basic inventory and finances app manager."
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["."]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.yapf]
based_on_style = "pep8"
indent_width = 2

[tool.isort]
indent = "  "
line_length = 88

